Fix missing protocol scheme when adding resources in a directory.